--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,6 @@ body {
     text-align:center;
     font-family: 'Roboto', sans-serif;
     color: #4a4a4a;
-    /* border: red 1px solid; */
 }
 img {
     max-width: 100%;
@@ -17,12 +16,14 @@ h1,
 h3 {
     font: 1em;
     font-weight: 900;
+    text-transform:uppercase;
 }
 h4 {
     font-weight: normal;
 }
 a{
     text-decoration: none;
+    color: #4a4a4a;
 }
 p{
     font-size: 1em;
@@ -38,11 +39,6 @@ p{
 .light-grey {
     background-color: #fafafa
 }
-
-.flex-container {
-  display: -webkit-inline-flex; /_ Safari _/
-  display: flex;
-}
 /*---------- header styles ----------*/
 
 header {
@@ -52,6 +48,7 @@ header {
 .title {
     margin: 0;
     padding: 1em 0 0.5em;
+    text-transform: capitalize;
 }
 .nav ul {
     padding-left: 0;
@@ -63,7 +60,6 @@ header {
     text-transform: uppercase;
     font-size: 1.1em;
     font-weight: bold;
-    color: #4a4a4a;
     background-color: #fff;
     padding: 0.75em;
     margin-bottom: 0.4em;
@@ -80,10 +76,7 @@ header {
     padding: 3em 0;
     border-bottom: 1px #4a4a4a solid;
 }
-.contactTitle {
-    text-transform:uppercase;
-    font-size: 1em;
-}
+
 .contact p {
     padding: 0;
 }
@@ -113,4 +106,49 @@ header {
     font-size: 0.8em;
     text-transform: uppercase;
     padding-top: 42px
+}
+/*---------- Media Query ----------*/
+@media screen and (min-device-width: 768px) {
+    /*---------- Tablet element layout ----------*/
+    h3 {
+        font-size: 0.8em;
+    }
+    p {
+        font-size: 0.8em;
+        padding: 0.4em;
+    }
+    /*---------- Tablet header layout ----------*/
+    .title {
+        font-size: 2em;
+    }
+    .nav li{
+        display: inline-block;
+        background-color: inherit;
+    }
+    .profile {
+        float: right;
+        width: 40%;
+        margin-left: 1em;
+        margin-bottom: 3em;
+    }
+    header div p {
+        text-align: left;
+        font-size: 1em;
+    }
+    /*---------- Tablet content layout ----------*/
+    .portfolio {
+        display: inline-block;
+        width: 50%;
+        margin-left: -5px;
+        padding-right: 10px;
+        vertical-align: top
+    }
+    .contentT {
+        margin-bottom: 0.3em;
+    }
+/*---------- clearfix ----------*/
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
 }
