--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,11 @@ p{
     font-weight: 300;
     padding-bottom: 2em;
 }
-
+li {
+    list-style-type: none;
+    text-transform: uppercase;
+    font-weight: bold;
+}
 /*--------- Basic layout styling ---------*/
 .wrap {
     width: 90%;
@@ -101,11 +105,14 @@ header {
     font-size: 1em;
     margin: 0;
 }
-.bck2top {
+.back2top {
     float: right;
     font-size: 0.8em;
     text-transform: uppercase;
     padding-top: 42px
+}
+footer .nav {
+    display: none;
 }
 /*---------- Media Query ----------*/
 @media screen and (min-device-width: 768px) {
@@ -146,6 +153,25 @@ header {
     .contentT {
         margin-bottom: 0.3em;
     }
+    /*---------- Tablet Contact and footer ----------*/
+    .contact p {
+        padding: 0 10%;
+        font-size: 1em;
+    }
+    .back2top {
+        display: none;
+    }
+    .foot-menu {
+        display: inline;
+        float: right;
+        font-size: 0.8em;
+        padding-top: 25px;
+    }
+    footer li{
+        display: inline;
+        padding-left: 20px;
+    }
+
 /*---------- clearfix ----------*/
 .clearfix::after {
   content: "";
