complete media screen 1024 styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -176,65 +176,34 @@ footer .nav {
 /*---------- Media Query ----------*/
 @media screen and (min-device-width: 1024px) {
     /*---------- Tablet element layout ----------*/
-    h3 {
-        font-size: 0.8em;
-    }
-    p {
-        font-size: 0.8em;
-        padding: 0.4em;
+    .wrap {
+        width: 60%;
+        margin:auto;
     }
     /*---------- Tablet header layout ----------*/
     .title {
-        font-size: 2em;
         float: left;
-        vertical-align: baseline;
     }
     .nav {
         float: right;
-        vertical-align: baseline;
+        margin-top: 20px
     }
-    .nav li{
-        display: inline-block;
-        background-color: inherit;
-    }
+
     .profile {
-        float: right;
-        width: 40%;
-        margin-left: 1em;
-        margin-bottom: 3em;
+        width: 45%;
     }
     header div p {
-        text-align: left;
-        font-size: 1em;
+        font-size: 1.4em;
     }
     /*---------- Tablet content layout ----------*/
     .portfolio {
-        display: inline-block;
-        width: 50%;
-        margin-left: -5px;
-        padding-right: 10px;
-        vertical-align: top
-    }
-    .contentT {
-        margin-bottom: 0.3em;
+        width: 33%;
+        margin: 0 -5px 20px 0;
     }
     /*---------- Tablet Contact and footer ----------*/
     .contact p {
-        padding: 0 10%;
-        font-size: 1em;
-    }
-    .back2top {
-        display: none;
-    }
-    .foot-menu {
-        display: inline;
-        float: right;
-        font-size: 0.8em;
-        padding-top: 25px;
-    }
-    footer li{
-        display: inline;
-        padding-left: 20px;
+        padding: 0 20%;
+        font-size: 1.2em;
     }
 }
 /*---------- clearfix ----------*/
