--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@ li {
 }
 
 .contact p {
-    padding: 0;
+    margin: 0 auto;
 }
 
 .contactDetails {
@@ -131,7 +131,7 @@ li {
 }
 
 /*---------- Media Query ----------*/
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
 
     /*---------- Tablet base layout ----------*/
     .flex {
@@ -227,7 +227,7 @@ li {
 }
 
 /*---------- Media Query ----------*/
-@media screen and (min-device-width: 1024px) {
+@media screen and (min-width: 1024px) {
     .wrap {
         max-width: 1024px;
     }
